       resolution bigger than 400x300
   * reduce minimap in resolutions <1000x620 to allow displaying all attacks
     from units with many attacks (eg the sylph)
   * add support for 800x480 when using the configure option
     --enable-small-gui, not everything displays correctly (preferences,
     mp-creation/lobby, ...), but normal gameplay should work perfectly
   * quick replays no longer scroll to leaders
   * scrolling to the leader the very first time happens instantly now
   * Various tunings about the transparency of hp/xp bars (avoid confusion like
     in bug #11030) and keep them highlighted for the selected unit too.
 * WML engine:
   * unstoring a leader for a side without a leader sets the leader for
     that side (bug #11048)
 * miscellaneous and bug fixes:
   * replays of midgame saves get the right recall list now (bug #10868)
   * Fixed controller problems when reloading MP game (bug #11046 and bit more)
   * Made scrollarea to stay in bottom if it is resized (bug #6974)
   * Fixed reference to invalid iterator in unit_cycle (bug #7991)
   * Fixed side_drop server message handling to correctly restart turn
   * Fixed random start ToD (bug #11056)
   * Fix an assert crash when a fake_unit_move starts outside of the screen
   * Fix temporary disappearing of hp/xp bars of victorious units (bug #11055)
   * Fix flickering hp/xp bars of ghost and other invisible units.
   * Placement of random terrain images is more random.
   * Optimization of damage floating labels
   
Version 1.3.16:
 * campaigns:
   * Two Brothers: set the leader of scenario one to passive to make it not
     too easy to win
 * language and i18n:
   * updated translations: Chinese, Czech, Dutch, Filipino, Finnish, German,
     Greek, Hungarian, Italian, Lithuanian, Polish, Slovak, Spanish, Turkish
   * replaced the font used for the chiense translation (gkai00mp.ttf) with a
     subset of WQY (just the gb2312 part is included) as requested by the
     chinese maintainer