@@ -495,15 +495,35 @@
 #endif
 
     [resolution]
+        #everywhere in here 1024x768 is seen as basic reference due to some hardcoded values
+        id=800x600
         width=800
         height=600
 
+        [screen]
+            # this is only useful as a ref for other rects
+            id=screen
+            rect="0,0,1024,768"
+        [/screen]
+
+        # top panel
+        [panel]
+            id=top-panel
+            image=themes/top-bg.png
+            ref=screen
+            rect="=,=,882,+26"
+            xanchor=top
+            yanchor=fixed
+        [/panel]
+
         [main_map]
-            rect=0,26,882,768
+            id=main-map
+            rect="=,+0,+882,768"
             xanchor=left
             yanchor=top
         [/main_map]
 
+        #not shown/used in the editor but might eventually be activated...
         [main_map_border]
             border_size = 0.5
             background_image = "terrain/off-map/background.png"
@@ -534,201 +554,221 @@
             border_image_bottom_even = "terrain/off-map/fade_border_bottom_even.png"
         [/main_map_border]
 
+        # rightside panel
+        [panel]
+            id=top-right-panel
+            image=themes/rightside-editor.png
+            rect="+0,0,1024,+304"
+            #rect=882,359,1024,722
+            xanchor=right
+            yanchor=fixed
+        [/panel]
+
+        [panel]
+            id=middle-right-panel
+            image=themes/rightside-bg.png
+            rect="=,+0,=,768"
+            #rect=882,25,1024,359
+            xanchor=right
+            yanchor=fixed
+        [/panel]
+
+# ain't working anyway in the way it should, the space can be better used otherwise
+#        [panel]
+#            id=bottom-right-panel
+#            image=themes/rightside-bottom.png
+#            rect=882,722,1024,768
+#            xanchor=right
+#            yanchor=bottom
+#        [/panel]
+
         [menu]
+            id=file-menu
             title=_"File"
             image=lite
             items=editnewmap,editloadmap,editsaveas,editsavemap,editrevert,editquit
-            rect=3,1,103,22
+            ref=top-panel
+            rect="=+3,=+1,+100,=-4"
             xanchor=fixed
             yanchor=fixed
         [/menu]
-
         [menu]
+            id=edit-menu
             title=_"Edit"
             image=lite
             items=undo,redo,editcut,editcopy,editpaste,editselectall,editfillselection,editrotateselection,editresize,editflip,editrefresh,editupdate,
-            rect=107,1,207,22
+            rect="+2,=,+100,="
+            xanchor=fixed
+            yanchor=fixed
         [/menu]
-
         [menu]
             id=settings-menu
             title=_"Settings"
             image=lite
             items=changelanguage,preferences,editautoupdate
-            rect=211,1,311,22
-        [/menu]
-
-        # The toolbar.
-        [menu]
-            image=draw_button_editor
-            items=editdraw
-            rect=913,229,937,254
-            xanchor=right
+            rect="+2,=,+100,="
+            xanchor=fixed
             yanchor=fixed
         [/menu]
-
-        [menu]
-            image=flood_button_editor
-            items=editfloodfill
-            rect=945,229,969,254
-            xanchor=right
-            yanchor=fixed
-        [/menu]
-
-        [menu]
-            image=start_position_button_editor
-            items=editsetstartpos
-            rect=977,229,1001,254
-            xanchor=right
-            yanchor=fixed
-        [/menu]
-
-        [menu]
-            image=resize_button_editor
-            items=editresize
-            rect=913,264,937,288
-            xanchor=right
-            yachnor=fixed
-        [/menu]
-
-        [menu]
-            image=flip_map_button_editor
-            items=editflip
-            rect=945,264,969,288
-            xanchor=right
-            yachnor=fixed
-        [/menu]
-
-        [menu]
-            image=undo_button_editor
-            items=undo
-            rect=957,304,981,328
-            xanchor=right
-            yachnor=fixed
-        [/menu]
-
-        [menu]
-            image=redo_button_editor
-            items=redo
-            rect=985,304,1009,328
-            xanchor=right
-            yachnor=fixed
-        [/menu]
-
-        [menu]
-            image=toggle_grid_button_editor
-            items=togglegrid
-            rect=977,264,1001,288
-            xanchor=right
-            yachnor=fixed
-        [/menu]
-
-        [menu]
-            image=zoom_in_button_editor
-            items=zoomin
-            rect=900,304,924,328
-            xanchor=right
-            yachnor=fixed
-        [/menu]
-
-        [menu]
-            image=zoom_out_button_editor
-            items=zoomout
-            rect=928,304,952,328
-            xanchor=right
-            yanchor=fixed
-        [/menu]
-
-        # top panel
-        [panel]
-            image=themes/top-bg.png
-            rect=0,0,1024,26
-            xanchor=top
-            yanchor=fixed
-        [/panel]
-
-        [panel]
-            image=themes/rightside-bg.png
-            rect=882,359,1024,722
-            xanchor=right
-            yanchor=top
-        [/panel]
-
-        [panel]
-            image=themes/rightside-bottom.png
-            rect=882,722,1024,768
-            xanchor=right
-            yanchor=bottom
-        [/panel]
-
-        [panel]
-            image=themes/rightside-editor.png
-            rect=882,25,1024,359
-            xanchor=right
-            yanchor=fixed
-        [/panel]
 
         [panel]
             id=villages-panel
-            ref=settings-menu
             image=themes/status-bg.png
-            rect="+5,=,+71,="
-            xanchor=proportional
+            ref=settings-menu
+            rect="+2,=+1,+65,+19"
+            xanchor=fixed
             yanchor=fixed
         [/panel]
-
-        [mini_map]
-            rect=892,32,1017,175
-            xanchor=right
-            yanchor=fixed
-        [/mini_map]
-
         [label]
             id=villages-icon
             icon=themes/villages.png
             text= _ "villages"
             ref=villages-panel
             rect="=+5,=+1,+17,+17"
-            xanchor=proportional
+            xanchor=fixed
             yanchor=fixed
         [/label]
 
+        [mini_map]
+            ref=top-right-panel
+            rect="=+10,=+7,=-7,+143"
+            #rect=892,32,1017,175
+            xanchor=right
+            yanchor=fixed
+        [/mini_map]
+
+
+        # The toolbar.
+        [menu]
+            id=draw_button_editor
+            image=draw_button_editor
+            items=editdraw
+            ref=top-right-panel
+            #harcoded since the brushes are above, which are hardcoded in src/editor/editor_layout.cpp
+            rect="=+27,200,+24,+24"
+            xanchor=right
+            yanchor=fixed
+        [/menu]
+        [menu]
+            id=flood_button_editor
+            image=flood_button_editor
+            items=editfloodfill
+            rect="+10,=,+24,+24"
+            xanchor=right
+            yanchor=fixed
+        [/menu]
+        [menu]
+            id=start_position_button_editor
+            image=start_position_button_editor
+            items=editsetstartpos
+            rect="+10,=,+24,+24"
+            xanchor=right
+            yanchor=fixed
+        [/menu]
+        [menu]
+            id=resize_button_editor
+            image=resize_button_editor
+            items=editresize
+            ref=draw_button_editor
+            rect="=,+10,+24,+24"
+            xanchor=right
+            yachnor=fixed
+        [/menu]
+        [menu]
+            id=flip_map_button_editor
+            image=flip_map_button_editor
+            items=editflip
+            rect="+10,=,+24,+24"
+            xanchor=right
+            yachnor=fixed
+        [/menu]
+        [menu]
+            id=toggle_grid_button_editor
+            image=toggle_grid_button_editor
+            items=togglegrid
+            rect="+10,=,+24,+24"
+            xanchor=right
+            yachnor=fixed
+        [/menu]
+        [menu]
+            id=undo_button_editor
+            image=undo_button_editor
+            items=undo
+            ref=resize_button_editor
+            rect="=-9,+10,+24,+24"
+            xanchor=right
+            yachnor=fixed
+        [/menu]
+        [menu]
+            id=redo_button_editor
+            image=redo_button_editor
+            items=redo
+            rect="+4,=,+24,+24"
+            xanchor=right
+            yachnor=fixed
+        [/menu]
+        [menu]
+            id=zoom_in_button_editor
+            image=zoom_in_button_editor
+            items=zoomin
+            rect="+4,=,+24,+24"
+            xanchor=right
+            yachnor=fixed
+        [/menu]
+        [menu]
+            id=zoom_out_button_editor
+            image=zoom_out_button_editor
+            items=zoomout
+            rect="+4,=,+24,+24"
+            xanchor=right
+            yanchor=fixed
+        [/menu]
+
+
         [status]
             [villages]
+                id=villages
                 ref=villages-icon
-                rect="+4,=,+55,+16"
+                rect="+2,=+1,+41,+16"
                 font_size=12
-                xanchor=proportional
+                xanchor=fixed
                 yanchor=fixed
             [/villages]
 
             [terrain]
+                id=status-terrain
+                ref=villages-panel
                 font_size=12
-                rect=820,4,920,20
-                xanchor=proportional
+                rect="+10,=+1,+200,+16"
+                xanchor=fixed
                 yanchor=fixed
             [/terrain]
 
             [position]
+                id=status-position
                 font_size=12
-                rect=925,4,1020,20
-                xanchor=proportional
+                ref=status-terrain
+                rect="822,=,+60,="
+                xanchor=right
                 yanchor=fixed
             [/position]
+            
+            #what is this supposed to do? seems to do *nothing* regarding the theme
+            #->commenting out
+            #[edit_left_button_function]
+            #    font_size=10
+            #    rect=900,330,1024,345
+            #    xanchor=right
+            #    yanchor=fixed
+            #[/edit_left_button_function]
 
-            [edit_left_button_function]
-                font_size=10
-                rect=900,330,1024,345
-                xanchor=right
-                yanchor=fixed
-            [/edit_left_button_function]
-
-            [selected_terrain]
-                font_size=10
-                rect=890,730,1024,20
-                xanchor=right
-                yanchor=bottom
-            [/selected_terrain]
+            #broken since I don't know when, commenting out
+            #[selected_terrain]
+            #    font_size=10
+            #    rect=890,730,1024,20
+            #    xanchor=right
+            #    yanchor=bottom
+            #[/selected_terrain]
         [/status]
     [/resolution]
 [/theme]
